# dnalenght

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  analyze_peaks.py  analyze_single_spectrum.py  bump_version.py  calculate_calibration_curve.py  calculate_peak_snr.py  categorize_frf_files.py  categorize_frf_files_async.py  changelog.md  config.py  convert_numpy_types.py  correct_baseline.py  detect_peaks_and_calibration.py  errorsflake8.txt  example.py  extract_and_list_paths.py  find_numpy_types.py  find_widest_peak_per_column.py  findflake8.ps1  findflake8.sh  fixflake8.ps1  fixflake8.sh  gflind.py  msbackadj.py  package.json  plot_peak_analysis.py  pnpm-lock.yaml  preprocess_data.py  process_frf_files.py  pyproject.toml  readerfrf.py  release.sh  requirements.txt  reveal_paths.py  (+11 more)
.github/workflows/: buid.yml  buidwin.yml  flake8.yml  flake8autofix.yml  flake8autofixwin.yml
docs/: dnalenght.html  index.html  search.js
docs/dnalenght/: analyze_peaks.html  analyze_single_spectrum.html  bump_version.html  categorize_frf_files.html  categorize_frf_files_async.html  convert_numpy_types.html  correct_baseline.html  example.html  extract_and_list_paths.html  find_numpy_types.html  find_widest_peak_per_column.html  msbackadj.html  preprocess_data.html  process_frf_files.html  readerfrf.html  reveal_paths.html  score_peaks.html  select_top_peaks.html  server.html  substractdf.html  subtract_reference_from_columns.html  version.html
files/Anton_lib_test_2_17_56_29/: 0.1-5-0.2_F9.frf  0.1-5-0.2_G9.frf  0.1-6-0.2_G8.frf  0.1-6-0.3_D8.frf  0.1-6-0.4_B8.frf  0.1-6-0.4_C8.frf  0.1-7-0.2_G7.frf  0.1-7-0.3_E7.frf  0.1-7-0.4_B7.frf  0.1-7-0.4_C7.frf  0.5-5-0.2_F6.frf  0.5-5-0.3_E6.frf  0.5-5-0.4_B6.frf  0.5-5-0.4_C6.frf  0.5-6-0.2_F5.frf  0.5-6-0.2_G5.frf  0.5-6-0.3_D5.frf  0.5-6-0.4_C5.frf  0.5-7-0.4_B4.frf  1-5-0.2_G3.frf  1-5-0.3_D3.frf  1-5-0.4_B3.frf  1-6-0.3_E2.frf  1-7-0.2_F1.frf  1-7-0.3_D1.frf  1-7-0.4_B1.frf  1-7-0.4_C1.frf  Anton_lib_test_2.fap  ladder_A1.frf  ladder_A2.frf  ladder_A3.frf  ladder_A5.frf  ladder_A6.frf  ladder_A7.frf  ladder_H1.frf  ladder_H2.frf  ladder_H6.frf
files/Anton_lib_test_2_17_56_29/Anton_lib_test_2_17_56_29_FSA/: 0.1-5-0.2_F9.fsa  0.1-5-0.2_G9.fsa  0.1-5-0.4_C9.fsa  0.1-6-0.2_F8.fsa  0.1-6-0.2_G8.fsa  0.1-6-0.4_C8.fsa  0.1-7-0.2_G7.fsa  0.1-7-0.4_C7.fsa  0.5-5-0.2_G6.fsa  0.5-5-0.3_D6.fsa  0.5-5-0.3_E6.fsa  0.5-5-0.4_C6.fsa  0.5-6-0.3_E5.fsa  0.5-6-0.4_B5.fsa  0.5-6-0.4_C5.fsa  0.5-7-0.2_G4.fsa  0.5-7-0.3_D4.fsa  0.5-7-0.3_E4.fsa  0.5-7-0.4_C4.fsa  1-5-0.2_F3.fsa  1-5-0.2_G3.fsa  1-5-0.3_D3.fsa  1-5-0.3_E3.fsa  1-5-0.4_B3.fsa  (+17 more)
files/Anton_lib_test_3_19_20_20/: 1-5-0.2_F3.frf  1-5-0.2_G3.frf  1-5-0.3_D3.frf  1-5-0.3_E3.frf  1-5-0.4_B3.frf  1-5-0.4_C3.frf  1-6-0.2_F2.frf  1-6-0.3_D2.frf  1-6-0.3_E2.frf  1-7-0.2_G1.frf  1-7-0.3_E1.frf  Anton_lib_test_3.fap  ladder_H2.frf
server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: index.html
static/fonts/: DejaVuSans.base64.js
(+123 files in other folders)
