[project]
name = "server"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.2",
    "pandas>=2.3.3",
    "pybaselines[full]>=1.2.1",
    "pydantic>=2.11.7",
    "pywavelets>=1.9.0",
    "scipy>=1.16.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "cibuildwheel>=3.3.1",
    "cython>=3.2.4",
    "poethepoet>=0.40.0",
    "pre-commit",
    "pyinstaller>=6.16.0",
    "pywebview>=6.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "numpydoc>=1.10.0",
    "pdoc>=16.0.0",
    "sphinx>=9.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dnalenght*"]
exclude = [
    "files*",
    "vendor*",
    "test*",
    "tests*",
    "doc*",
    "docs*",
    "examples*",
    "build*",
    "dist*",
    "*.egg-info*"
]

[tool.uv.sources]

[tool.uv.extra-build-dependencies]
pyyawt = ["importlib-metadata>=4.0", "typing-extensions"]
